[gd_scene format=3 uid="uid://bat0sr4ty6gb7"]

[ext_resource type="Script" uid="uid://cs7lrd21ro8re" path="res://scenes/minigames/plank_minigame.gd" id="1_plankgame"]
[ext_resource type="AudioStream" uid="uid://cn72evgghs8y" path="res://assets/audio/screwing.mp3" id="2_aw80s"]
[ext_resource type="AudioStream" uid="uid://csg3ul6kmqsj0" path="res://assets/audio/validate.mp3" id="2_dnof5"]
[ext_resource type="FontFile" uid="uid://dngwuth2a6635" path="res://assets/fonts/Alphakind.ttf" id="2_wrole"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.38431373, 0.75686276, 1, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)

[node name="PlankMinigame" type="CanvasLayer" unique_id=971208391]
layer = 10
script = ExtResource("1_plankgame")
plank_count = 3

[node name="Backdrop" type="ColorRect" parent="." unique_id=875022581]
z_index = -2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.24705882)

[node name="GameArea" type="Node2D" parent="." unique_id=1711846685]

[node name="Title" type="Label" parent="." unique_id=1859494011]
anchors_preset = 10
anchor_right = 1.0
offset_left = 273.0
offset_top = 21.0
offset_right = -276.0
offset_bottom = 57.0
grow_horizontal = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_wrole")
theme_override_font_sizes/font_size = 22
text = "BARRICADE LA FENÃ‹TRE"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="." unique_id=1015679304]
z_index = -2
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.08
anchor_right = 0.9
anchor_bottom = 0.92
offset_left = 157.79993
offset_right = -157.79993
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="EscapeHint" type="Label" parent="Panel" unique_id=2005291856]
modulate = Color(0.5, 0.5, 0.5, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_right = 6.1035156e-05
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_wrole")
theme_override_font_sizes/font_size = 11
text = "ESC - Abandonner"
horizontal_alignment = 1

[node name="ScrewAudioPlayer" type="AudioStreamPlayer" parent="." unique_id=1004619203]
stream = ExtResource("2_aw80s")

[node name="SuccessAudioPlayer" type="AudioStreamPlayer" parent="." unique_id=1343020154]
stream = ExtResource("2_dnof5")
